fixtures/src/invalid/content-no-html-element/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<body xmlns="http://www.w3.org/1999/xhtml">
  <h1>Chapter 1</h1>
  <p>Hello, world.</p>
</body>